PROTON-2568: Free raw connection addrinfo in raw connection cleanup

This covers the case that the raw connection is cleaned up between
starting the connection and processing the event for actually
connecting the connection.